--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -387,17 +387,7 @@ jobs:
             done
             return 1
           }
-          platform_id() {
-            case "$LABEL" in
-              macos-arm64) echo "darwin-aarch64" ;;
-              macos-intel) echo "darwin-x86_64" ;;
-              windows) echo "windows-x86_64" ;;
-              windows-arm64) echo "windows-aarch64" ;;
-              linux) echo "linux-x86_64" ;;
-              *) echo "$LABEL" ;;
-            esac
-          }
-          installer_platform_label() {
+          asset_platform_label() {
             case "$LABEL" in
               macos-arm64) echo "macos-apple-silicon" ;;
               macos-intel) echo "macos-intel" ;;
@@ -408,10 +398,9 @@ jobs:
             esac
           }
 
-          PLATFORM="$(platform_id)"
-          PREFIX="openjar-launcher_${TAG}_${PLATFORM}"
-          INSTALLER_PLATFORM="$(installer_platform_label)"
-          INSTALLER_PREFIX="OpenJar-Launcher_${TAG}_${INSTALLER_PLATFORM}"
+          ASSET_PLATFORM="$(asset_platform_label)"
+          PREFIX="openjar-launcher_${TAG}_${ASSET_PLATFORM}"
+          INSTALLER_PREFIX="OpenJar-Launcher_${TAG}_${ASSET_PLATFORM}"
 
           if [ "${{ runner.os }}" = "macOS" ]; then
             APPS=("$BUNDLE_DIR/macos/"*.app)
@@ -525,7 +514,7 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          node -e 'const fs=require("fs"); const path=require("path"); const root="release-assets"; const repo=process.env.GITHUB_REPOSITORY; const tag=process.env.GITHUB_REF_NAME; if(!repo||!tag){ throw new Error("Missing GITHUB_REPOSITORY or GITHUB_REF_NAME"); } const version=tag.startsWith("v")?tag.slice(1):tag; const walk=(dir)=>{ const out=[]; for (const item of fs.readdirSync(dir,{withFileTypes:true})) { const full=path.join(dir,item.name); if(item.isDirectory()) out.push(...walk(full)); else if(item.isFile()) out.push(full); } return out; }; const files=walk(root).map((full)=>path.relative(root,full).replace(/\\\\/g,"/")); const updaterArchives=files.filter((f)=>/_auto-update-only_updater\.(tar\.gz|zip)$/.test(path.basename(f))); const platforms={}; const pattern=/^openjar-launcher_v[^_]+_(darwin-aarch64|darwin-x86_64|windows-aarch64|windows-x86_64|linux-x86_64)_auto-update-only_updater\.(tar\.gz|zip)$/; for (const archive of updaterArchives) { const fileName=path.basename(archive); const match=fileName.match(pattern); if(!match) continue; const platform=match[1]; const sigPath=archive+".sig"; const fullSig=path.join(root,sigPath); if(!fs.existsSync(fullSig)) continue; const signature=fs.readFileSync(fullSig,"utf8").trim(); if(!signature) continue; const encodedFileName=encodeURIComponent(fileName); platforms[platform]={ signature, url:"https://github.com/"+repo+"/releases/download/"+tag+"/"+encodedFileName }; } if (Object.keys(platforms).length===0) { throw new Error("No signed updater artifacts found for latest.json generation."); } const manifest={ version, notes:"OpenJar Launcher "+tag, pub_date:new Date().toISOString(), platforms }; const outPath=path.join(root,"latest.json"); fs.writeFileSync(outPath, JSON.stringify(manifest,null,2)+"\\n","utf8"); console.log("Wrote "+outPath); console.log(JSON.stringify(manifest,null,2));'
+          node -e 'const fs=require("fs"); const path=require("path"); const root="release-assets"; const repo=process.env.GITHUB_REPOSITORY; const tag=process.env.GITHUB_REF_NAME; if(!repo||!tag){ throw new Error("Missing GITHUB_REPOSITORY or GITHUB_REF_NAME"); } const version=tag.startsWith("v")?tag.slice(1):tag; const walk=(dir)=>{ const out=[]; for (const item of fs.readdirSync(dir,{withFileTypes:true})) { const full=path.join(dir,item.name); if(item.isDirectory()) out.push(...walk(full)); else if(item.isFile()) out.push(full); } return out; }; const files=walk(root).map((full)=>path.relative(root,full).replace(/\\\\/g,"/")); const updaterArchives=files.filter((f)=>/_auto-update-only_updater\.(tar\.gz|zip)$/.test(path.basename(f))); const platforms={}; const platformMap={ "macos-apple-silicon":"darwin-aarch64", "macos-intel":"darwin-x86_64", "windows-arm64":"windows-aarch64", "windows-x64":"windows-x86_64", "linux-x64":"linux-x86_64" }; const pattern=/^openjar-launcher_v[^_]+_(macos-apple-silicon|macos-intel|windows-arm64|windows-x64|linux-x64)_auto-update-only_updater\.(tar\.gz|zip)$/; for (const archive of updaterArchives) { const fileName=path.basename(archive); const match=fileName.match(pattern); if(!match) continue; const platform=platformMap[match[1]]; if(!platform) continue; const sigPath=archive+".sig"; const fullSig=path.join(root,sigPath); if(!fs.existsSync(fullSig)) continue; const signature=fs.readFileSync(fullSig,"utf8").trim(); if(!signature) continue; const encodedFileName=encodeURIComponent(fileName); platforms[platform]={ signature, url:"https://github.com/"+repo+"/releases/download/"+tag+"/"+encodedFileName }; } if (Object.keys(platforms).length===0) { throw new Error("No signed updater artifacts found for latest.json generation."); } const manifest={ version, notes:"OpenJar Launcher "+tag, pub_date:new Date().toISOString(), platforms }; const outPath=path.join(root,"latest.json"); fs.writeFileSync(outPath, JSON.stringify(manifest,null,2)+"\\n","utf8"); console.log("Wrote "+outPath); console.log(JSON.stringify(manifest,null,2));'
 
       - name: Create/Update GitHub Release and upload assets
         uses: softprops/action-gh-release@v2
